Added responsive navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<nav>
+    <input id="nav-toggle" type="checkbox">
+	<div class="logo">Huis Zeeduin</div>
+	<ul class="links">
+		<li><a href="#home">Home</a></li>
+		<li><a href="#gallery">Gallery</a></li>
+		<li><a href="#about">About us</a></li>
+	</ul>
+	<label for="nav-toggle" class="icon-burger">
+		<div class="line"></div>
+		<div class="line"></div>
+		<div class="line"></div>
+	</label>
+</nav>
