Added photo's to carousel

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/src/assets/woonkamer.jpg" class="d-block w-100" alt="Picture of living room">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/src/assets/slaapkamer.jpg" class="d-block w-100" alt="Picture of bedroom">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/src/assets/keuken.jpg" class="d-block w-100" alt="Picture of kitchen">
     </div>
   </div>
 </div>
