Formatted with prettier

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,29 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../assets/terras.jpg" class="d-block w-100" alt="Picture of the terrace">
-    </div>
-    <div class="carousel-item">
-      <img src="../../assets/slaapkamer.jpg" class="d-block w-100" alt="Picture of bedroom">
-    </div>
-    <div class="carousel-item">
-      <img src="../../assets/woonkamer.jpg" class="d-block w-100" alt="Picture of kitchen">
-    </div>
-  </div>
+<div
+	id="carouselExampleSlidesOnly"
+	class="carousel slide carousel-fade"
+	data-bs-ride="carousel"
+>
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img
+				src="../../assets/terras.jpg"
+				class="d-block w-100"
+				alt="Picture of the terrace"
+			/>
+		</div>
+		<div class="carousel-item">
+			<img
+				src="../../assets/slaapkamer.jpg"
+				class="d-block w-100"
+				alt="Picture of bedroom"
+			/>
+		</div>
+		<div class="carousel-item">
+			<img
+				src="../../assets/woonkamer.jpg"
+				class="d-block w-100"
+				alt="Picture of kitchen"
+			/>
+		</div>
+	</div>
 </div>
