Added drop shaddow

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
 				alt="Picture of the terrace"
 			/>
 		</div>
+
 		<div class="carousel-item">
 			<img
 				src="../../assets/slaapkamer.jpg"
@@ -18,11 +19,12 @@
 				alt="Picture of bedroom"
 			/>
 		</div>
+
 		<div class="carousel-item">
 			<img
 				src="../../assets/woonkamer.jpg"
 				class="d-block w-100"
-				alt="Picture of kitchen"
+				alt="Picture of living room"
 			/>
 		</div>
 	</div>
