--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,36 +1,23 @@
 <div class="row">
   <div class="column">
     <img src="../../assets/terras.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="../../assets/terras_2.jpg" style="width:100%">
+    <img src="../../assets/huisaanzicht.jpg" style="width:100%">
+    <img src="../../assets/strand.jpg" style="width:100%">
+    <img src="../../assets/strand_2.jpg" style="width:100%">
+    <img src="../../assets/zonsondergang.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+    <img src="../../assets/duinen.jpg" style="width:100%">
+    <img src="../../assets/woonkamer.jpg" style="width:100%">
+    <img src="../../assets/woonkamer_2.jpg" style="width:100%">
+    <img src="../../assets/woonkamer_3.jpg" style="width:100%">
+    <img src="../../assets/keuken.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
-    <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+    <img src="../../assets/hal.jpg" style="width:100%">
+    <img src="../../assets/meterkast.jpg" style="width:100%">
+    <img src="../../assets/slaapkamer.jpg" style="width:100%">
+    <img src="../../assets/vlaaijenweg.jpg" style="width:100%">
   </div>
 </div>
