Formatted with prettier

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,25 +1,25 @@
 <div class="row">
-  <div class="column">
-    <img src="../../assets/terras.jpg" style="width:100%">
-    <img src="../../assets/terras_2.jpg" style="width:100%">
-    <img src="../../assets/huisaanzicht.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="../../assets/duinen.jpg" style="width:100%">
-    <img src="../../assets/woonkamer.jpg" style="width:100%">
-    <img src="../../assets/woonkamer_2.jpg" style="width:100%">
-    <img src="../../assets/woonkamer_3.jpg" style="width:100%">
-    <img src="../../assets/keuken.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="../../assets/hal.jpg" style="width:100%">
-    <img src="../../assets/meterkast.jpg" style="width:100%">
-    <img src="../../assets/slaapkamer.jpg" style="width:100%">
-  </div>
-    <div class="column">
-    <img src="../../assets/strand.jpg" style="width:100%">
-    <img src="../../assets/strand_2.jpg" style="width:100%">
-    <img src="../../assets/zonsondergang.jpg" style="width:100%">
-    <img src="../../assets/vlaaijenweg.jpg" style="width:100%">
-  </div>
+	<div class="column">
+		<img src="../../assets/terras.jpg" style="width: 100%" />
+		<img src="../../assets/terras_2.jpg" style="width: 100%" />
+		<img src="../../assets/huisaanzicht.jpg" style="width: 100%" />
+	</div>
+	<div class="column">
+		<img src="../../assets/duinen.jpg" style="width: 100%" />
+		<img src="../../assets/woonkamer.jpg" style="width: 100%" />
+		<img src="../../assets/woonkamer_2.jpg" style="width: 100%" />
+		<img src="../../assets/woonkamer_3.jpg" style="width: 100%" />
+		<img src="../../assets/keuken.jpg" style="width: 100%" />
+	</div>
+	<div class="column">
+		<img src="../../assets/hal.jpg" style="width: 100%" />
+		<img src="../../assets/meterkast.jpg" style="width: 100%" />
+		<img src="../../assets/slaapkamer.jpg" style="width: 100%" />
+	</div>
+	<div class="column">
+		<img src="../../assets/strand.jpg" style="width: 100%" />
+		<img src="../../assets/strand_2.jpg" style="width: 100%" />
+		<img src="../../assets/zonsondergang.jpg" style="width: 100%" />
+		<img src="../../assets/vlaaijenweg.jpg" style="width: 100%" />
+	</div>
 </div>
